[package]
name = "ecs_bench"
version = "0.1.0"
authors = ["Lukas Schmierer <lukas.schmierer@lschmierer.de>"]

[dependencies]
serde_derive = "0.9"
serde = "0.9"

[dev-dependencies]
ecs = "0.23.1"
rayon = "0.8"
specs = "0.10"
recs = "2.0.1"
trex = "0.2.0"
calx-ecs = "0.5"
froggy = "0.3"
constellation = "0.2"
